--- a/src/static/filterBoauty/style.css
+++ b/src/static/filterBoauty/style.css
@@ -16,6 +16,11 @@ h1{
     margin:2em ;
 
 }
-#submit_upload{
-    al
+.textCarousel{
+    -webkit-text-stroke: 1px #000;
+    position: absolute;
+    top: 10%;
+    left: 39%;
+    font-size: 3em;
+    color: #f5f5f5;
 }
