--- a/src/templates/filters.html
+++ b/src/templates/filters.html
@@ -1,6 +1,6 @@
 {% include "includes/header.html"%}
 
-    <h1>Choisir un filtre pour votre image/h1>
+    <h1>Choisir un filtre pour votre image</h1>
     <div class="container">
         <div class="row">
                
@@ -37,11 +37,9 @@
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Precedent</span>
                     </a>
                     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Suivant</span>
                     </a>
                 </div>
             </div>
