--- a/src/templates/includes/header.html
+++ b/src/templates/includes/header.html
@@ -11,9 +11,13 @@
     <title>Filter Boauty</title>
     </head>
     <body>    
-        <nav class="navbar bg-light">
+        <nav class="navbar bg-dark">
         <div class="container-fluid">
-          <span class="navbar-brand mb-0 h1">Filter Boauty</span>
+          <span class="navbar-brand mb-0 h1 title">
+            <a href="/" >  
+              Filter Boauty
+            </a>
+          </span>
         </div>
       </nav>
 </html>
