--- a/src/static/filterBoauty/style.css
+++ b/src/static/filterBoauty/style.css
@@ -1,6 +1,9 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
 html, body {
     height: 100%;
     width: 100%;
+    background-color: whitesmoke;
 }
 #fileform{
     height: 100%;
@@ -17,10 +20,29 @@ h1{
 
 }
 .textCarousel{
-    -webkit-text-stroke: 1px #000;
+    -webkit-text-stroke: 0.25px black;
     position: absolute;
-    top: 10%;
-    left: 39%;
-    font-size: 3em;
-    color: #f5f5f5;
+    top: 2%;
+    text-align: center;
+    font-size: 3.15em;
+    color: white;
+    left: 5%;
+    opacity: 0.9;
+  
+}
+.carousel-item  img{
+    border-radius: 2%;
+}
+nav{
+    height: 66px;
+}
+.title {
+    color: whitesmoke;
+}
+a{
+    color: whitesmoke;
+    text-decoration: none;
+}
+.title:hover{
+    color: white;
 }
